--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<router-outlet></router-outlet>
+<app-nav-bar *ngIf="navSrv.showNav"></app-nav-bar>
+<div class="page-content">
+  <router-outlet></router-outlet>
+</div>
