--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -10,7 +10,7 @@
       </li>
       <li>
         <a class="text text--big" (click)="logout()">
-          Logout <app-icon name="lock_outline"></app-icon>
+          Logout <app-icon position="right" name="lock_outline"></app-icon>
         </a>
       </li>
     </ul>
