--- a/src/styles/elements.scss
+++ b/src/styles/elements.scss
@@ -1,6 +1,8 @@
 body {
   font-family: open-sans-light;
   font-size: 16px;
+  position: relative;
+  z-index: 0;
 
   .logo {
     font-family: rainbow-universe;
