--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -19,5 +19,8 @@
   src: url('./fonts/open-sans-condensed-light-italic.ttf');
 }
 
+@import './variables';
 @import './override';
 @import './elements';
+@import './positioning';
+@import './spacing';
