--- a/src/app/components/flyout/flyout.component.html
+++ b/src/app/components/flyout/flyout.component.html
@@ -1,6 +1,7 @@
-<div class="flyout z-depth-5" [ngClass]="cssClasses">
-  <app-icon class="flyout__close" name="close" (click)="close()"></app-icon>
-  <ng-content></ng-content>
+<div class="flyout">
+  <div class="flyout__close-area" *ngIf="show" (click)="close()"></div>
+  <div class="flyout__window z-depth-5" [ngClass]="cssClasses">
+    <app-icon class="flyout__close" name="close" (click)="close()"></app-icon>
+    <ng-content></ng-content>
+  </div>
 </div>
-
-
