--- a/src/app/components/flyout/flyout.component.scss
+++ b/src/app/components/flyout/flyout.component.scss
@@ -1,60 +1,72 @@
-
 .flyout {
-  position: fixed;
-  background-color: rgba(255, 255, 255, 0.9);
-  z-index: 1;
-  box-sizing: border-box;
-  padding: 50px;
-  transition: .5s;
-
-  &--closed {
-    &-right {
-      transform: translateX(100%);
-    }
-
-    &-left {
-      transform: translateX(-100%);
-    }
-
-    &-top {
-      transform: translateY(-100%);
-    }
-
-    &-bottom {
-      transform: translateY(100%);
-    }
-  }
-
-  &--left,
-  &--right {
-    width: 100%;
-    max-width: 1024px;
+  &__close-area {
+    position: fixed;
+    left: 0;
+    right: 0;
     top: 0;
     bottom: 0;
+    z-index: 1;
+    cursor: pointer;
   }
 
-  &--top,
-  &--bottom {
-    height: 100%;
-    max-height: 450px;
-    right: 0;
-    left: 0;
-  }
+  &__window {
+    position: fixed;
+    background-color: rgba(255, 255, 255, 1);
+    box-sizing: border-box;
+    padding: 50px;
+    transition: 0.5s;
+    z-index: 2;
+    overflow-y: scroll;
 
-  &--left {
-    left: 0;
-  }
+    &--closed {
+      &-right {
+        transform: translateX(100%);
+      }
 
-  &--right {
-    right: 0;
-  }
+      &-left {
+        transform: translateX(-100%);
+      }
 
-  &--top {
-    top: 0;
-  }
+      &-top {
+        transform: translateY(-100%);
+      }
 
-  &--bottom {
-    bottom: 0;
+      &-bottom {
+        transform: translateY(100%);
+      }
+    }
+
+    &--left,
+    &--right {
+      width: 100%;
+      max-width: 1024px;
+      top: 0;
+      bottom: 0;
+    }
+
+    &--top,
+    &--bottom {
+      height: 100%;
+      max-height: 450px;
+      right: 0;
+      left: 0;
+    }
+
+    &--left {
+      left: 0;
+    }
+
+    &--right {
+      right: 0;
+    }
+
+    &--top {
+      top: 0;
+    }
+
+    &--bottom {
+      bottom: 0;
+    }
   }
 
   &__close {
@@ -67,7 +79,7 @@
     height: 35px;
     justify-content: center;
     align-items: center;
-    transition: .4s;
+    transition: 0.4s;
     border-radius: 50%;
 
     &:hover {
