--- a/src/app/components/forms/input/input.component.html
+++ b/src/app/components/forms/input/input.component.html
@@ -1,8 +1,7 @@
-<div class="input-field col s6">
-  <i class="material-icons prefix">{{icon}}</i>
+<div class="input-field margin-bottom-m">
+  <i *ngIf="!!icon" class="material-icons prefix">{{icon}}</i>
   <input [(ngModel)]="value"
          [type]="type"
-         [placeholder]="!!placeholder ? placeholder : field"
          [id]="field" type="text" class="validate">
-  <label *ngIf="!!label" [for]="field" [class.active]="value">First Name</label>
+  <label *ngIf="!!label" [for]="field" [class.active]="value">{{'form.' + label | translate}}</label>
 </div>
