--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-nav-bar *ngIf="navSrv.showNav"></app-nav-bar>
-<div class="page-content">
+<div class="page-content padding-left-l padding-right-l padding-top-s">
   <router-outlet></router-outlet>
 </div>
