--- a/src/app/components/forms/date-picker/date-picker.component.html
+++ b/src/app/components/forms/date-picker/date-picker.component.html
@@ -4,6 +4,7 @@
     type="text"
     class="datepicker"
     [ngClass]="'datepicker-' + id"
+    [disabled]="disabled"
   />
-  <label [for]="'datepicker-' + id" class="">{{'form.' + label | translate}}</label>
+  <label [for]="'datepicker-' + id" class="text--big">{{'form.' + label | translate}}</label>
 </div>
